@@ -5,12 +5,11 @@ import com.theokanning.openai.completion.chat.ChatCompletionChoice;
 import com.theokanning.openai.completion.chat.ChatCompletionRequest;
 import com.theokanning.openai.completion.chat.ChatMessage;
 import com.theokanning.openai.service.OpenAiService;
+import eu.sblendorio.bbs.core.BbsThread;
 import eu.sblendorio.bbs.core.HtmlUtils;
 import eu.sblendorio.bbs.core.PetsciiColors;
 import eu.sblendorio.bbs.core.PetsciiThread;
-import jakarta.mail.*;
-import jakarta.mail.internet.InternetAddress;
-import jakarta.mail.internet.MimeMessage;
+import eu.sblendorio.bbs.tenants.mixed.PatreonData;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -19,8 +18,6 @@ import org.davidmoten.text.utils.WordWrap;
 import java.io.File;
 import java.io.FileWriter;
 import java.io.IOException;
-import java.security.NoSuchAlgorithmException;
-import java.security.SecureRandom;
 import java.time.Duration;
 import java.time.Instant;
 import java.util.*;
@@ -33,7 +30,6 @@ import static java.lang.System.getProperty;
 import static java.lang.System.getenv;
 import static java.util.Arrays.asList;
 import static java.util.stream.Collectors.joining;
-import static java.util.stream.Collectors.toList;
 import static org.apache.commons.collections4.CollectionUtils.size;
 import static org.apache.commons.lang3.StringUtils.*;
 import static org.apache.commons.lang3.math.NumberUtils.toInt;
@@ -42,28 +38,9 @@ import static org.apache.commons.lang3.math.NumberUtils.toLong;
 public class ClientChatGptPetscii extends PetsciiThread {
     private static Logger logger = LogManager.getLogger(ClientChatGptPetscii.class);
     private static Logger loggerAuthorizations = LogManager.getLogger("authorizations");
-    private static int CODE_LENGTH = 6;
-
-    private static byte[] LOGO_AUTHENTICATE = readBinaryFile("petscii/gpt.seq");
-    private static byte[] BIG_LOGO = readBinaryFile("petscii/gpt-biglogo.seq");
-
+    public static byte[] PETSCII_BIG_LOGO = BbsThread.readBinaryFile("petscii/gpt-biglogo.seq");
     private static final String WAIT_MESSAGE = "Please wait...";
     private static final String EXIT_ADVICE = "Type \".\" to EXIT";
-    protected static final String PATREON_USER = "PATREON_USER";
-    protected static final String PATREON_LEVEL = "PATREON_LEVEL";
-    private static final long TIMEOUT = 300_000;
-    private String user = null;
-    private String patreonLevel = null;
-
-    private static Random random;
-
-    static {
-        try {
-            random = SecureRandom.getInstance("SHA1PRNG");
-        } catch (NoSuchAlgorithmException e) {
-            random = new Random(System.currentTimeMillis());
-        }
-    }
 
     private static int USER_COLOR = WHITE;
     private static int ASSISTANT_COLOR = PetsciiColors.LIGHT_BLUE;
@@ -89,21 +66,21 @@ public class ClientChatGptPetscii extends PetsciiThread {
 
     @Override
     public void doLoop() throws Exception {
-        boolean keepGoing = authenticate();
-        if (!keepGoing)
+        PatreonData patreonData = PatreonData.authenticatePetscii(this);
+        if (patreonData == null)
             return;
 
-        String model = toInt(patreonLevel) > 0 ? "gpt-4" : "gpt-3.5-turbo";
+        String model = toInt(patreonData.patreonLevel) > 0 ? "gpt-4" : "gpt-3.5-turbo";
 
-        registerFirstAccess(user);
-        changeClientName(user+"/"+UUID.randomUUID());
+        registerFirstAccess(patreonData.user);
+        changeClientName(patreonData.user+"/"+UUID.randomUUID());
 
         cls();
-        write(BIG_LOGO);
+        write(PETSCII_BIG_LOGO);
         println();
         List<ChatMessage> conversation = new LinkedList<>();
         String input;
-        if (toInt(patreonLevel) > 0) {
+        if (toInt(patreonData.patreonLevel) > 0) {
             write(GREY3);
             String s = "Model: " + model;
             println(repeat(' ',Math.abs(37-s.length())) + s);
@@ -128,7 +105,7 @@ public class ClientChatGptPetscii extends PetsciiThread {
             conversation.add(new ChatMessage("user", input));
             logger.info("IP: '{}', email: '{}', role: 'user', message: {}",
                     ipAddress.getHostAddress(),
-                    user,
+                    patreonData.user,
                     input.replaceAll("\n", "\\\\n"));
 
             ChatCompletionRequest request = builder()
@@ -162,7 +139,7 @@ public class ClientChatGptPetscii extends PetsciiThread {
                     println("Press any key to EXIT");
                     logger.error("IP: '{}', email: '{}', exception: {}",
                             ipAddress.getHostAddress(),
-                            user,
+                            patreonData.user,
                             e);
                     flush();
                     resetInput();
@@ -179,7 +156,7 @@ public class ClientChatGptPetscii extends PetsciiThread {
 
             logger.info("IP: '{}', email: '{}', role: '{}', message: {}",
                     ipAddress.getHostAddress(),
-                    user,
+                    patreonData.user,
                     message.getRole(),
                     message.getContent().replaceAll("\n", "\\\\n"));
 
@@ -274,153 +251,6 @@ public class ClientChatGptPetscii extends PetsciiThread {
         flush();
     }
 
-    private boolean authenticate() throws IOException {
-        final String DEFAULT = "0";
-        String hostRow;
-        if (isNotBlank(hostRow = readExternalTxt(getProperty("PATREON_WHITELIST_IP_FILE", getProperty("user.home") + File.separator + "patreon_whitelist_ip.txt"))
-                .stream()
-                .filter(StringUtils::isNotBlank)
-                .map(StringUtils::trim)
-                .filter(row -> !row.startsWith(";"))
-                .filter(row -> row.replaceAll(",.*$", "").equalsIgnoreCase(ipAddress.getHostAddress()))
-                .findFirst().orElse(""))
-        ) {
-            if (ipAddress.getHostAddress() != null) {
-                user = ipAddress.getHostAddress();
-                patreonLevel = !hostRow.contains(",") ? DEFAULT : hostRow.replaceAll("^.*,", "");
-                return true;
-            }
-        }
-
-        try {
-            user = (String) getRoot().getCustomObject(PATREON_USER);
-            patreonLevel = (String) getRoot().getCustomObject(PATREON_LEVEL);
-        } catch (NullPointerException | ClassCastException e) {
-            log("User not logged " + e.getClass().getName() + " " + e.getMessage());
-        }
-        if (user != null && !"null".equalsIgnoreCase(user))
-            return true;
-
-        cls();
-        write(LOGO_AUTHENTICATE);
-        println();
-        write(GREY2);
-        println("For security reasons, the BBS will log:");
-        write(WHITE); print("IP address"); write(GREY2); print(", "); write(WHITE); print("email"); write(GREY2); print(" and "); write(WHITE); print("messages"); write(GREY2); println(".");
-        println("If you proceed, you will accept this.");
-        println();
-        write(readBinaryFile("petscii/patreon-access.seq"));
-        write(GREY3);
-        println("Your Patreon email:");
-        println();
-        println(repeat(chr(163), 39));
-        write(GREY2); print("You can use: "); write(YELLOW); print("\"-\""); write(GREY2); println(" for underscore");
-        write(YELLOW); print("             \"!\""); write(GREY2); print(" in place of "); write(YELLOW); println("\"@\"");
-        println();
-        write(GREY2); print("Example: "); write(WHITE); print("johndoe"); write(YELLOW); print("!"); write(WHITE); println("gmail.com");
-        write(/*RETURN, RETURN, RETURN, */RETURN, GREY1);
-        print("www.patreon.com/FrancescoSblendorio");
-        write(UP, UP, UP, UP, UP, RETURN);
-        write(UP, UP, UP);
-        flush(); resetInput();
-        write(PetsciiColors.LIGHT_BLUE);
-        String tempEmail = readLine();
-        write(RETURN, RETURN, RETURN, RETURN, RETURN, RETURN, GREY1); print(repeat(' ', 39));
-        write(UP, UP, UP, UP, UP, UP, UP, RETURN);
-        final String userEmail = trimToEmpty(tempEmail);
-        if (isBlank(userEmail) || ".".equals(trimToEmpty(userEmail)))
-            return false;
-
-        String emailRow = readExternalTxt(getProperty("PATREON_EMAILS", getProperty("user.home") + File.separator + "patreon_emails.txt"))
-                .stream()
-                .filter(StringUtils::isNotBlank)
-                .map(StringUtils::trim)
-                .filter(row -> !row.startsWith(";"))
-                .filter(row -> row.replace("_", "-").replace("*", "@").replace("!", "@")
-                        .replaceAll(",.*$", "")
-                        .equalsIgnoreCase(userEmail.replace("_", "-").replace("*", "@").replace("!", "@")))
-                .findAny()
-                .orElse("");
-
-        if (isBlank(emailRow)) {
-            loggerAuthorizations.info("Patreon unknown email. Email:{}, Host:{}, Port:{}", userEmail, socket.getInetAddress().getHostAddress(), socket.getLocalPort());
-            println();
-            write(PetsciiColors.RED);
-            print("         "); write(REVON); println("                       ");
-            print("         "); write(REVON); println(" Not subscriber's mail ");
-            print("         "); write(REVON); println(" Press any key to exit ");
-            print("         "); write(REVON); println("                       ");
-            flush(); resetInput();
-            readKey();
-            return false;
-        }
-
-        String email = emailRow.replaceAll(",.*$", "");
-
-        String secretCode = generateSecretCode(CODE_LENGTH);
-        println();
-        println(repeat(' ',31));
-        println(repeat(' ',32));
-        println();
-        println(repeat(' ',26));
-        write(UP, UP, UP, UP);
-        waitOn();
-        boolean success = sendSecretCode(email, secretCode);
-        if (!success) {
-            waitOff();
-            println();
-            write(PetsciiColors.RED);
-            print("         "); write(REVON); println("                       ");
-            print("         "); write(REVON); println("   Mail server error   ");
-            print("         "); write(REVON); println(" Press any key to exit ");
-            print("         "); write(REVON); print("                       "); write(REVOFF); print("  ");
-            flush(); resetInput();
-            readKey();
-            return false;
-        }
-        waitOff();
-        long startMillis = System.currentTimeMillis();
-        write(GREY3);
-        println();
-        println("Please type " + CODE_LENGTH + "-digit code just sent");
-        print("to your email: ");
-        write(PetsciiColors.LIGHT_BLUE);
-        flush(); resetInput();
-        String userCode = readLine(CODE_LENGTH);
-        userCode = trimToEmpty(userCode);
-        long endMillis = System.currentTimeMillis();
-        if (endMillis-startMillis > TIMEOUT) {
-            loggerAuthorizations.info("Patreon timeout. Email:{}, Host:{}, Port:{}", userEmail, socket.getInetAddress().getHostAddress(), socket.getLocalPort());
-            write(UP, UP, UP, PetsciiColors.RED);
-            print("         "); write(REVON); println("                       ");
-            print("         "); write(REVON); print(" Timeout, try it again "); write(REVOFF); println("   ");
-            print("         "); write(REVON); println(" Press any key to exit ");
-            print("         "); write(REVON); println("                       ");
-            flush(); resetInput();
-            readKey();
-            return false;
-        }
-
-        if (!userCode.equalsIgnoreCase(secretCode)) {
-            loggerAuthorizations.info("Patreon wrong code. Email:{}, Host:{}, Port:{}", userEmail, socket.getInetAddress().getHostAddress(), socket.getLocalPort());
-            write(UP, UP, UP, PetsciiColors.RED);
-            print("         "); write(REVON); println("                       ");
-            print("         "); write(REVON); print(" It was the wrong code "); write(REVOFF); println("   ");
-            print("         "); write(REVON); println(" Press any key to exit ");
-            print("         "); write(REVON); println("                       ");
-            flush(); resetInput();
-            readKey();
-            return false;
-        }
-
-        user = email;
-        patreonLevel = !emailRow.contains(",") ? DEFAULT : emailRow.replaceAll("^.*,", "");
-        getRoot().setCustomObject(PATREON_USER, user);
-        getRoot().setCustomObject(PATREON_LEVEL, patreonLevel);
-        loggerAuthorizations.info("Patreon login. Email: {}, Host:{}, Port: {}", userEmail, socket.getInetAddress().getHostAddress(), socket.getLocalPort());
-        return true;
-    }
-
     private void registerFirstAccess(String user) throws IOException {
         final String filename = getProperty("PATREON_EMAILS", getProperty("user.home") + File.separator + "consent_emails.txt");
         List<String> rows = readExternalTxt(filename);
@@ -429,7 +259,7 @@ public class ClientChatGptPetscii extends PetsciiThread {
                 .filter(StringUtils::isNotBlank)
                 .map(StringUtils::trimToEmpty)
                 .map(row -> row.split(";")[0])
-                .collect(toList())
+                .toList()
                 .contains(user);
 
         if (!yetConnected) {
@@ -438,54 +268,6 @@ public class ClientChatGptPetscii extends PetsciiThread {
             for(String str: rows) writer.write(str + System.lineSeparator());
             writer.close();
         }
-    }
-
-    private boolean sendSecretCode(String email, String secretCode) {
-        final String USERNAME = defaultString(getProperty("MAIL_FROM", getenv("MAIL_FROM")));
-        final String PASSWORD = defaultString(getProperty("MAIL_FROM_PASSWORD", getenv("MAIL_FROM_PASSWORD")));
-        final String MAIL_SMTP_HOST = defaultString(getProperty("MAIL_SMTP_HOST", getenv("MAIL_SMTP_HOST")));
-        final String MAIL_SMTP_PORT = defaultString(getProperty("MAIL_SMTP_PORT", getenv("MAIL_SMTP_PORT")));
-        final String MAIL_SMTP_AUTH = defaultString(getProperty("MAIL_SMTP_AUTH", getenv("MAIL_SMTP_AUTH")));
-        final String MAIL_SMTP_STARTTLS_ENABLE = defaultString(getProperty("MAIL_SMTP_STARTTLS_ENABLE", getenv("MAIL_SMTP_STARTTLS_ENABLE")));
-
-        Properties prop = new Properties();
-        prop.put("mail.smtp.host", MAIL_SMTP_HOST);
-        prop.put("mail.smtp.port", MAIL_SMTP_PORT);
-        prop.put("mail.smtp.auth", MAIL_SMTP_AUTH);
-        prop.put("mail.smtp.starttls.enable", MAIL_SMTP_STARTTLS_ENABLE);
-
-        Session session = Session.getInstance(prop,
-                new jakarta.mail.Authenticator() {
-                    protected PasswordAuthentication getPasswordAuthentication() {
-                        return new PasswordAuthentication(USERNAME, PASSWORD);
-                    }
-                });
-
-        try {
-            Message message = new MimeMessage(session);
-            message.setFrom(new InternetAddress(USERNAME));
-            message.setRecipients(
-                    Message.RecipientType.TO,
-                    InternetAddress.parse(email)
-            );
-            message.setSubject("BBS access code");
-            message.setText("Your temporary code is " + secretCode);
-
-            Transport.send(message);
-
-            return true;
-        } catch (MessagingException e) {
-            log("Send Email Exception:", e);
-            return false;
-        }
-    }
-
-    private String generateSecretCode(int length) {
-        return random
-            .ints(0, 10)
-            .limit(length)
-            .mapToObj(String::valueOf)
-            .collect(joining());
     }
 
 }
